<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context="com.cisp362.passwordchecker.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/lblUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txtUserID"
        android:text="@string/strUserID"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/lblPassword"
        app:layout_constraintRight_toRightOf="@+id/lblPassword"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/txtUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/strUserID"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/lblUserID"
        app:layout_constraintRight_toRightOf="@+id/txtPassword"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtPassword"
        app:layout_constraintTop_toTopOf="@+id/lblUserID"/>

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:labelFor="@+id/txtPassword"
        android:text="@string/strPwd"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/msgSuccess"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="18sp"
        tools:text="@string/strPwd"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/txtUserID"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/msgSuccess"/>

    <TextView
        android:id="@+id/msgSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strFailure"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="22dp"
        android:layout_marginTop="126dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/lblPassword"/>

    <TextView
        android:id="@+id/txtAttempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strAttempts"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="21dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/msgSuccess"
        app:layout_constraintTop_toTopOf="@+id/msgSuccess"/>

    <Button
        android:id="@+id/btnSubmit"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sgrLogin"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAttempts"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtAttempts"/>

</android.support.constraint.ConstraintLayout>
